# kusa.player

./: .gitignore  .gitmodules  CONFIG.py  Cargo.toml  LICENSE  README  README.md  README_yn.md  TODO.md  cmd_help.md  pyproject.toml  requirement.txt  requirements.txt  requirment.txt  run.py  songinfo.json  test.py  xmake.lua
assets/: ViRTUS.m4a
config/: CONFIG.py  __init__.py  quickplay_save.json  settings.yml
core/: Cargo.toml
core/src/: player.rs
core/src/track/: local.rs  mod.rs  remote.rs
lib/: cpd.py
lib/CPD/: cpd.py
libs/CPD/: cpd.py
music/download/: save.m4a
music/local/: music.opus
src/: Music.py  cli.py  cmd_invoke.py  core.py  error.rs  lib.rs  main.cpp  main.py  main.rs  player.rs  source_decoder.rs  test.py  test.rs  utility.py  vlc_core.py
src/CLI/: commands.py  core.py  interface.py  main.py  music.py
src/cli/: Music.py  __init__.py  core.py
src/core/: core.py  fetch.py  music.py  vlc_core.py
src/player/: error.rs  mod.rs  player.rs  source_decoder.rs
src/track/: error.rs  local.rs  mod.rs  remote.rs  simple_player.rs  youtube.rs
src/util/: downloader.rs
src/utils/: utility.py
src/ytdl/: mod.rs
ytdl/: Cargo.toml  info.json
ytdl/src/: lib.rs  main.rs
