[package]
name = "rust-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# audio
rodio = {version = "0.17.1",features = ["symphonia-all"]}
symphonia = { version = "0.5.3", features = ["all-codecs"] }
tempfile = "3.6.0"
tokio = { version = "1", features = ["full"] }
reqwest = {version = "0.11.18", features = ["blocking"] }
anyhow = "1.0"
thiserror = "1.0"
stream-download = "0.3.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features=["env-filter"]}
rand = "0.8.5"
url = "2"


[dependencies.pyo3]
version = "0.20.0"
features = ["extension-module"]


[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "pylib"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]
