
[package]
name = "ytdlp-binding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async
tokio = { version = "1", features = ["full"] }

# error handling
anyhow = "1.0"
thiserror = "1.0"


# logging
tracing-subscriber = "0.3"
async-trait = "0.1.77"
lazy_static = "1.4.0"

reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.114"

[dependencies.tracing]
version = "0.1"
features = ["attributes"]
